--- a/sass/_Header.scss
+++ b/sass/_Header.scss
@@ -1,7 +1,9 @@
 header.navigation {
-  position: fixed;
-  margin-top: 20px;
+  position: sticky;
+  top: -10px;
+  // margin-top: 20px;
   width: 100%;
+  z-index: 999;
 
   div.nav {
     width: 100%;
@@ -15,8 +17,10 @@ header.navigation {
       padding-left: 40px;
 
       a.nav__logo {
-        width: 80px;
+        display: block;
+        width: 125px;
         height: 50px;
+        cursor: pointer;
         img {
           height: 100%;
         }
@@ -40,7 +44,7 @@ header.navigation {
           width: 100%;
           height: 100%;
           color: white;
-          font-size: 16px;
+          font-size: 18px;
           text-transform: uppercase;
           line-height: 40px;
           margin: 0 auto;
