--- a/sass/_Heading.scss
+++ b/sass/_Heading.scss
@@ -1,12 +1,13 @@
 div.heading {
+  width: 100%;
+  height: 100vh;
+  // display: none;
   img.heading__logo {
     position: absolute;
-    // width: 100%;
     height: 80%;
     top: 55%;
     left: 50%;
     transform: translate(-50%, -50%);
-    // border: 2px solid red;
     z-index: -2;
     opacity: 0.8;
   }
@@ -14,14 +15,15 @@ div.heading {
 
 div.heading::after {
   content: "";
-  background: url("/images/tło1.jpg");
+  background: url("../images/tło1.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   opacity: 0.2;
   top: 0;
   left: 0;
-  bottom: 0;
+  bottom: -10px;
   right: 0;
   position: absolute;
+  box-shadow: inset 0px -10px 100px 20px black;
   z-index: -1;
 }
