--- a/sass/_AboutMe.scss
+++ b/sass/_AboutMe.scss
@@ -2,6 +2,7 @@ section.aboutMe {
   width: 100%;
   min-height: 100vh;
   position: relative;
+  display: none;
 
   h1.aboutMe__title {
     margin: 30px auto;
@@ -71,7 +72,6 @@ section.aboutMe {
   }
 
   div.second__row {
-    // margin-top: 20px;
     display: grid;
     padding: 20px 10vw 20px 200px;
     grid-template-columns: 1fr 2fr;
