portfolio section fixed

--- a/sass/_AboutMe.scss
+++ b/sass/_AboutMe.scss
@@ -2,7 +2,7 @@ section.aboutMe {
   width: 100%;
   min-height: 100vh;
   position: relative;
-  display: none;
+  // display: none;
 
   h1.aboutMe__title {
     margin: 30px auto;
