--- a/sass/_Heading.scss
+++ b/sass/_Heading.scss
@@ -1,7 +1,7 @@
 div.heading {
   width: 100%;
   height: 100vh;
-  display: none;
+  // display: none;
   img.heading__logo {
     position: absolute;
     height: 80%;
