--- a/sass/_Portfolio.scss
+++ b/sass/_Portfolio.scss
@@ -1,20 +1,21 @@
 section.portfolio {
   width: 100%;
-  min-height: 100vh;
 
   h1.portfolio__title {
     margin: 30px auto;
     font-weight: 500;
     font-size: 30px;
     text-transform: uppercase;
-    width: 130px;
+    width: 190px;
     height: 50px;
+    text-align: center;
+    // border: 2px solid red;
   }
   h1.portfolio__title::after {
     content: "";
     display: block;
     margin: 0 auto;
-    width: 55%;
+    width: 50%;
     padding-top: 20px;
     border-bottom: 2px solid white;
   }
