finished cooperation section

--- a/sass/_Cooperation.scss
+++ b/sass/_Cooperation.scss
@@ -1,19 +1,42 @@
 section.cooperation {
+  width: 90%;
+  margin: 0 auto;
+  min-height: 100vh;
   h1.cooperation__title {
     margin: 50px auto 30px;
     font-weight: 500;
     font-size: 30px;
-
     text-transform: uppercase;
-    width: 130px;
+    width: 250px;
     height: 50px;
+    text-align: center;
   }
   h1.cooperation__title::after {
     content: "";
     display: block;
     margin: 0 auto;
-    width: 55%;
+    width: 45%;
     padding-top: 20px;
     border-bottom: 2px solid white;
+  }
+  div.cooperation__container {
+    width: 80%;
+    margin: 0 auto;
+    display: grid;
+
+    grid-template-columns: 1fr 1fr;
+
+    p.cooperation__text {
+      margin: 20px 50px;
+      width: 80%;
+
+      text-align: center;
+      font-size: 16px;
+      line-height: 26px;
+    }
+    img.cooperation__img {
+      width: 80%;
+      margin: 20px 50px;
+    }
   }
 }
