--- a/sass/_Services.scss
+++ b/sass/_Services.scss
@@ -1,23 +1,18 @@
 section.services {
   width: 100%;
-  border: 2px solid red;
-  margin-top: -50px;
-
-  position: relative;
+  margin-top: -30px;
   background: transparent;
-  z-index: 1;
-
   background-image: url("../images/złote\ logo.jpg");
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-position: center;
-  background-size: cover;
+  background-size: contain;
+  padding: 20px 0;
 
   h1.services__title {
-    margin: 50px auto 30px;
+    margin: 40px auto 30px;
     font-weight: 500;
     font-size: 30px;
-
     text-transform: uppercase;
     width: 130px;
     height: 50px;
@@ -36,7 +31,7 @@ section.services {
   }
   p.services__text {
     width: 80%;
-    margin: 50px auto 50px;
+    margin: 50px auto 80px;
     text-align: end;
     line-height: 30px;
   }
