--- a/sass/_Portfolio.scss
+++ b/sass/_Portfolio.scss
@@ -1,5 +1,7 @@
 section.portfolio {
-  width: 100%;
+  width: 95%;
+  margin: 0 auto;
+  // display: none;
 
   h1.portfolio__title {
     margin: 30px auto;
