--- a/sass/_Services.scss
+++ b/sass/_Services.scss
@@ -8,6 +8,7 @@ section.services {
   background-position: center;
   background-size: contain;
   padding: 20px 0;
+  // display: none;
 
   h1.services__title {
     margin: 40px auto 30px;
