--- a/sass/_Cooperation.scss
+++ b/sass/_Cooperation.scss
@@ -2,6 +2,8 @@ section.cooperation {
   width: 90%;
   margin: 0 auto;
   min-height: 100vh;
+  // display: none;
+
   h1.cooperation__title {
     margin: 50px auto 30px;
     font-weight: 500;
