--- a/sass/_Contact.scss
+++ b/sass/_Contact.scss
@@ -1,21 +1,32 @@
 section.contact {
   width: 100%;
-  margin: 30px auto 50px;
+  margin-top: 30px;
+
   position: relative;
   min-height: 400px;
   overflow-y: hidden;
+
+  @media (max-width: 660px) {
+    min-height: 600px;
+  }
 
   #particles-js {
     position: absolute;
     background-color: black;
     width: 100%;
+    height: 100%;
   }
 
-  div.contact__container {
+  div.contact__wrapper {
     width: 80%;
+    margin: 0 auto;
     margin-left: 10%;
     position: absolute;
-    // z-index: 1;
+
+    @media (max-width: 960px) {
+      width: 95%;
+      margin-left: 2.5%;
+    }
 
     h1.contact__title {
       margin: 30px auto;
@@ -33,18 +44,38 @@ section.contact {
       width: 50%;
       padding-top: 20px;
     }
+
     div.contact__container {
       width: 95%;
       margin: 0 auto;
-
       display: flex;
       justify-content: space-between;
+
+      @media (max-width: 960px) {
+        width: 100%;
+      }
+
+      @media (max-width: 660px) {
+        flex-direction: column-reverse;
+        width: 90%;
+      }
+
       div.container__media {
         margin-top: 20px;
         padding-top: 20px;
         padding-bottom: 20px;
         border-right: 2px solid white;
         width: 40%;
+
+        @media (max-width: 960px) {
+          width: 50%;
+          border-right: none;
+        }
+
+        @media (max-width: 660px) {
+          width: 100%;
+        }
+
         ul.media__list {
           list-style: none;
           li.list__position {
@@ -52,6 +83,10 @@ section.contact {
             height: 45px;
 
             a {
+              @media (max-width: 660px) {
+                justify-content: center;
+              }
+
               display: flex;
               cursor: pointer;
               width: 100%;
@@ -60,13 +95,21 @@ section.contact {
               text-decoration: none;
 
               span {
-                height: 35px;
-                line-height: 35px;
+                height: 40px;
+                line-height: 40px;
+                @media (max-width: 660px) {
+                  height: 30px;
+                  line-height: 30px;
+                  font-size: 14px;
+                }
               }
 
               img {
-                height: 30px;
+                height: 35px;
                 margin-right: 15px;
+                @media (max-width: 660px) {
+                  height: 25px;
+                }
               }
             }
           }
@@ -76,6 +119,14 @@ section.contact {
         padding-top: 20px;
         width: 55%;
         background-color: transparent;
+
+        @media (max-width: 960px) {
+          width: 50%;
+        }
+
+        @media (max-width: 660px) {
+          width: 100%;
+        }
 
         form.form__content {
           display: flex;
@@ -89,9 +140,22 @@ section.contact {
             border-radius: 6px;
             margin-bottom: 15px;
             padding: 7px;
+            @media (max-width: 660px) {
+              width: 75%;
+              margin: 0 auto 15px;
+            }
+            @media (max-width: 660px) {
+              width: 95%;
+            }
           }
           input.short {
             width: 50%;
+            @media (max-width: 960px) {
+              width: 75%;
+            }
+            @media (max-width: 660px) {
+              width: 95%;
+            }
           }
           textarea.form__textarea {
             min-height: 70px;
@@ -109,6 +173,9 @@ section.contact {
             border-radius: 6px;
             padding: 7px;
             cursor: pointer;
+            @media (max-width: 660px) {
+              margin-left: 12.5%;
+            }
           }
         }
       }
