--- a/sass/_Heading.scss
+++ b/sass/_Heading.scss
@@ -1,11 +1,15 @@
 div.heading {
   width: 100%;
   height: 100vh;
-  // display: none;
+
+  @media (max-width: 660px) {
+    border: 2px solid red;
+    width: 100% !important;
+  }
   img.heading__logo {
     position: absolute;
     height: 80%;
-    top: 55%;
+    top: 52%;
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: -2;
