--- a/sass/_Navigation.scss
+++ b/sass/_Navigation.scss
@@ -29,13 +29,23 @@ div.navigation-menu {
   top: 0;
   right: 0;
   width: 50%;
-  background: #222222;
+  background: linear-gradient(to right, #222222, black);
   height: 100%;
   transform: skewX(0deg) translate(100%, 0);
   transform-origin: top right;
   transition: all 0.2s ease-in;
   border-left: 2px solid white;
   z-index: -1;
+  @media (max-width: 960px) {
+    width: 75%;
+  }
+
+  @media (max-width: 660px) {
+    width: 85%;
+  }
+  @media (max-width: 460px) {
+    width: 90%;
+  }
 }
 .navigation-menu ul {
   transform: skewX(-8deg);
@@ -45,14 +55,12 @@ div.navigation-menu {
   top: 120px;
   width: 400px;
   text-align: right;
-  // cursor: pointer;
 }
 .navigation-menu ul li {
   position: relative;
   font-size: 32px;
   color: hsl(0, 0%, 10%);
   line-height: 64px;
-  // cursor: pointer;
 }
 .navigation-menu ul li a {
   border: none;
@@ -60,10 +68,12 @@ div.navigation-menu {
   text-decoration: none;
   cursor: pointer;
   transition: 0.2s ease-in;
+  text-transform: uppercase;
+  display: inline-block;
 }
 
 .navigation-menu ul li a:hover {
-  font-size: 35px;
+  transform: scale(1.15);
 }
 
 .navigation-menu.active {
@@ -79,7 +89,6 @@ div.navigation-menu {
   opacity: 1;
   transform: translate(0, 0);
   transition: all 0.2s ease-in 0s;
-  // cursor: pointer;
 }
 .navigation-menu.active li:nth-child(1) {
   transition-delay: 0.3s;
