finished portfolio mobile section

--- a/sass/_Heading.scss
+++ b/sass/_Heading.scss
@@ -3,8 +3,8 @@ div.heading {
   height: 100vh;
 
   @media (max-width: 660px) {
-    border: 2px solid red;
-    width: 100% !important;
+    // border: 2px solid red;
+    // width: 100% !important;
   }
   img.heading__logo {
     position: absolute;
