--- a/sass/_AboutMe.scss
+++ b/sass/_AboutMe.scss
@@ -1,19 +1,17 @@
 section.aboutMe {
   width: 95%;
   margin: 0 auto;
-  // min-height: 100vh;
   position: relative;
-  // display: none;
 
   h1.aboutMe__title {
     margin: 30px auto;
     font-weight: 500;
     font-size: 30px;
-
     text-transform: uppercase;
     width: 130px;
     height: 50px;
   }
+
   h1.aboutMe__title::after {
     content: "";
     display: block;
@@ -27,14 +25,25 @@ section.aboutMe {
     display: flex;
     flex-direction: row;
     // border: 2px solid red;
+
+    @media (max-width: 640px) {
+      flex-wrap: wrap;
+      flex-direction: row;
+    }
     div.main__label {
       padding: 5px 5vw;
       display: grid;
       grid-template-columns: 1fr 1fr;
       grid-gap: 40px;
-      // width: 100%;
       justify-content: space-between;
-      // border: 2px solid red;
+      // border: 2px solid blue;
+
+      @media (max-width: 640px) {
+        width: 100%;
+        grid-gap: 40px;
+        padding: 0;
+      }
+
       div.label {
         width: 100%;
         font-size: 4vw;
@@ -42,8 +51,14 @@ section.aboutMe {
         justify-content: center;
         line-height: 4vw;
         padding-top: 25%;
-        // border: 2px solid red;
         text-transform: uppercase;
+
+        @media (max-width: 640px) {
+          padding-top: 10%;
+          font-size: 25px;
+          line-height: 30px;
+          height: 120px;
+        }
 
         p.text {
           text-align: end;
@@ -62,11 +77,21 @@ section.aboutMe {
         border-right: 4px solid wheat;
         left: 22px;
         top: -10vw;
+
+        @media (max-width: 640px) {
+          height: 100px;
+          top: -80px;
+        }
       }
     }
     img {
       height: 20vw;
       max-height: 400px;
+
+      @media (max-width: 640px) {
+        margin: 0 auto;
+        height: 160px;
+      }
     }
   }
 
@@ -75,11 +100,27 @@ section.aboutMe {
     padding: 0 10% 20px 10%;
     grid-template-columns: 1fr 2fr;
     grid-gap: 0px;
+
+    @media (max-width: 640px) {
+      grid-template-columns: 1fr;
+    }
+
     img {
       height: 22vw;
+
+      @media (max-width: 640px) {
+        margin: 30px auto 20px;
+        height: 220px;
+      }
     }
     p.text {
       line-height: 35px;
+      @media (max-width: 640px) {
+        width: 110%;
+        justify-content: center;
+        font-size: 16px;
+        line-height: 22px;
+      }
     }
   }
 }
