--- a/sass/_Cooperation.scss
+++ b/sass/_Cooperation.scss
@@ -4,6 +4,10 @@ section.cooperation {
   min-height: 100vh;
   // display: none;
 
+  @media (max-width: 1260px) {
+    width: 95%;
+  }
+
   h1.cooperation__title {
     margin: 50px auto 30px;
     font-weight: 500;
@@ -21,24 +25,35 @@ section.cooperation {
     padding-top: 20px;
     border-bottom: 2px solid white;
   }
+
   div.cooperation__container {
     width: 80%;
     margin: 0 auto;
     display: grid;
-
     grid-template-columns: 1fr 1fr;
+
+    @media (max-width: 1360px) {
+      width: 100%;
+    }
+
+    @media (max-width: 1024px) {
+      grid-template-columns: 1fr;
+    }
 
     p.cooperation__text {
       margin: 20px 50px;
       width: 80%;
-
       text-align: center;
-      font-size: 16px;
-      line-height: 26px;
+      font-size: 17px;
+      line-height: 30px;
+      @media (max-width: 1024px) {
+        font-size: 16px;
+        line-height: 24px;
+      }
     }
     img.cooperation__img {
-      width: 80%;
-      margin: 20px 50px;
+      width: 70%;
+      margin: 20px auto;
     }
   }
 }
