--- a/sass/_Portfolio.scss
+++ b/sass/_Portfolio.scss
@@ -32,5 +32,8 @@ section.portfolio {
   div.portfolio__gallery {
     margin: 50px auto 0;
     width: 90%;
+    @media (max-width: 640px) {
+      width: 110%;
+    }
   }
 }
