--- a/sass/_AboutMe.scss
+++ b/sass/_AboutMe.scss
@@ -1,6 +1,7 @@
 section.aboutMe {
   width: 95%;
   margin: 0 auto;
+  padding-top: 30px;
   position: relative;
 
   h1.aboutMe__title {
@@ -55,7 +56,7 @@ section.aboutMe {
 
         @media (max-width: 640px) {
           padding-top: 10%;
-          font-size: 25px;
+          font-size: 23px;
           line-height: 30px;
           height: 120px;
         }
@@ -103,6 +104,7 @@ section.aboutMe {
 
     @media (max-width: 640px) {
       grid-template-columns: 1fr;
+      padding: 0;
     }
 
     img {
@@ -116,7 +118,9 @@ section.aboutMe {
     p.text {
       line-height: 35px;
       @media (max-width: 640px) {
-        width: 110%;
+        // border: 2px solid red;
+        width: 100%;
+        // margin: 0 10px;
         justify-content: center;
         font-size: 16px;
         line-height: 22px;
