--- a/sass/_Heading.scss
+++ b/sass/_Heading.scss
@@ -1,11 +1,8 @@
 div.heading {
   width: 100%;
   height: 100vh;
+  // overflow-x: hidden;
 
-  @media (max-width: 660px) {
-    // border: 2px solid red;
-    // width: 100% !important;
-  }
   img.heading__logo {
     position: absolute;
     height: 80%;
@@ -14,6 +11,10 @@ div.heading {
     transform: translate(-50%, -50%);
     z-index: -2;
     opacity: 0.8;
+    @media (max-width: 660px) {
+      object-fit: contain;
+      width: 100%;
+    }
   }
 }
 
@@ -30,4 +31,8 @@ div.heading::after {
   position: absolute;
   box-shadow: inset 0px -10px 100px 20px black;
   z-index: -1;
+  @media (max-width: 660px) {
+    // object-fit: cover;
+    // overflow-x: hidden;
+  }
 }
