--- a/sass/_Navigation.scss
+++ b/sass/_Navigation.scss
@@ -55,12 +55,21 @@ div.navigation-menu {
   top: 120px;
   width: 400px;
   text-align: right;
+
+  @media (max-width: 460px) {
+    right: 80px;
+  }
 }
 .navigation-menu ul li {
   position: relative;
   font-size: 32px;
   color: hsl(0, 0%, 10%);
   line-height: 64px;
+
+  @media (max-width: 460px) {
+    font-size: 28px;
+    line-height: 56px;
+  }
 }
 .navigation-menu ul li a {
   border: none;
