--- a/sass/_Portfolio.scss
+++ b/sass/_Portfolio.scss
@@ -1,6 +1,7 @@
 section.portfolio {
   width: 95%;
   margin: 0 auto;
+  padding-top: 30px;
   // display: none;
 
   h1.portfolio__title {
@@ -33,7 +34,8 @@ section.portfolio {
     margin: 50px auto 0;
     width: 90%;
     @media (max-width: 640px) {
-      width: 110%;
+      width: 100%;
+      // padding-left: -40px !important;
     }
   }
 }
