--- a/sass/_Services.scss
+++ b/sass/_Services.scss
@@ -7,7 +7,7 @@ section.services {
   background-repeat: no-repeat;
   background-position: center;
   background-size: contain;
-  padding: 20px 0;
+  padding-top: 30px;
   // display: none;
 
   h1.services__title {
