--- a/sass/_Navigation.scss
+++ b/sass/_Navigation.scss
@@ -90,11 +90,13 @@ div.navigation-menu {
 }
 
 .navigation-menu li {
+  display: none;
   opacity: 0;
   transform: translate(0, 10px);
   transition: all 0s ease-in 0.5s;
 }
 .navigation-menu.active li {
+  display: block;
   opacity: 1;
   transform: translate(0, 0);
   transition: all 0.2s ease-in 0s;
