--- a/sass/_Portfolio.scss
+++ b/sass/_Portfolio.scss
@@ -35,7 +35,10 @@ section.portfolio {
     width: 90%;
     @media (max-width: 640px) {
       width: 100%;
-      // padding-left: -40px !important;
     }
   }
+}
+
+div.WS-lb-ctrl--close {
+  font-size: 35px;
 }
