small design changes

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -13,7 +13,7 @@ body {
   min-height: 200vh;
   background-color: #000;
   width: 100%;
-  color: rgb(240, 229, 208);
+  color: white;
 }
 
 div.wrapper {
