--- a/sass/_AboutMe.scss
+++ b/sass/_AboutMe.scss
@@ -75,7 +75,7 @@ section.aboutMe {
         display: block;
         position: relative;
         height: 12vw;
-        border-right: 4px solid wheat;
+        border-right: 4px solid white;
         left: 22px;
         top: -10vw;
 
@@ -111,8 +111,9 @@ section.aboutMe {
       height: 22vw;
 
       @media (max-width: 640px) {
+        display: none;
         margin: 30px auto 20px;
-        height: 220px;
+        // height: 220px;
       }
     }
     p.text {
@@ -120,7 +121,7 @@ section.aboutMe {
       @media (max-width: 640px) {
         // border: 2px solid red;
         width: 100%;
-        // margin: 0 10px;
+        margin-top: 10px;
         justify-content: center;
         font-size: 16px;
         line-height: 22px;
